# infiray-lrf

./: README.md  commands.py  esp_ota.py  filter.py  main.py  prompt.py  pyproject.toml  requirements.txt  rw.py  sender.py  sniffer.py  sniffer.py.bak  wrepl.py
.github/workflows/: python-publish.yml
esp32/: boot.py  emulator.py  emulator19.py  install.md  lrf_emulator.py  lrf_tester.py  main.py  ota.json  parser.py  requirements.txt  run.py  sniffer.py  wlan.cfg  wrepl.py
esp32/scripts/: arun.py  inf_emulator.py  main.py  stm_emulator.py
esp32/scripts/src/: oled.py  pinout.py
esp32/src/: bootmode.py  oled.py  ota.py  parser.py  run.py  wrepl.py  writer.py
infiray_lrf/: __init__.py  commands.py  logger.py  sender.py
rpi/: fake_machine.py  main.py  main1.py  parser.py  vectronix.py
stmtest/: README.md  code.py  lrfemu.py  lrfemu_min.py
